feat: end of  projects section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,191 @@
 <!doctype html>
-<html lang="en">
-  <head>
+<html lang="fr">
+
+<head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NS1CVR0J45"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'G-NS1CVR0J45');
+    </script>
+
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio-v2</title>
-  </head>
+    <!-- SEO Principal -->
+    <title>Développeur Symfony React WordPress Freelance | Puy-de-Dôme (63)</title>
+    <meta name="description"
+        content="Christophe Thevenet - Développeur freelance Symfony, React & WordPress basé à Riom. Applications web, sites vitrine et e-commerce. Puy-de-Dôme et distanciel." />
+    <meta name="keywords"
+        content="développeur web freelance, Symfony, React, WordPress, WooCommerce, Puy-de-Dôme, Riom, Clermont-Ferrand, Vichy, application web, site vitrine, e-commerce, développeur full-stack, PHP, JavaScript, création site internet, Auvergne" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://christophethevenet.fr" />
+    <meta property="og:title" content="Développeur Symfony React WordPress Freelance | Puy-de-Dôme" />
+    <meta property="og:description"
+        content="Développeur freelance Symfony, React & WordPress basé à Riom. Applications web, sites vitrine et e-commerce. Puy-de-Dôme et distanciel." />
+    <meta property="og:image" content="https://christophethevenet.fr/assets/affiche_digitob_v3.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@D_I_G_I_T_O_B" />
+    <meta name="twitter:title" content="Développeur Symfony React WordPress Freelance | Puy-de-Dôme" />
+    <meta name="twitter:description"
+        content="Développeur freelance Symfony, React & WordPress basé à Riom. Applications web et e-commerce. Puy-de-Dôme et distanciel." />
+    <meta name="twitter:image" content="https://christophethevenet.fr/assets/affiche_digitob_v3.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/src/assets/img/general/favicon_digitob.ico" />
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Animate On Scroll -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- Video.js -->
+    <link href="https://unpkg.com/video.js@7/dist/video-js.min.css" rel="stylesheet" />
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="./src/css/main.scss" />
+    <!-- JSON-LD Schema.org pour le SEO -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Christophe Thevenet",
+        "alternateName": "DIGITOB",
+        "jobTitle": "Développeur Web Fullstack Freelance",
+        "url": "https://christophethevenet.fr",
+        "image": "https://christophethevenet.fr/assets/affiche_digitob_v3.png",
+        "email": "digitob@yahoo.com",
+        "telephone": "+33602873251",
+        "sameAs": [
+            "https://github.com/Christophe-THEVENET",
+            "https://www.facebook.com/profile.php?id=61565436472053",
+            "https://twitter.com/D_I_G_I_T_O_B"
+        ],
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "9 Rue des Colonnes",
+            "addressLocality": "Paris",
+            "postalCode": "75002",
+            "addressRegion": "Île-de-France",
+            "addressCountry": "FR"
+        },
+        "knowsAbout": [
+            "Symfony",
+            "React",
+            "JavaScript",
+            "PHP",
+            "WordPress",
+            "WooCommerce",
+            "Développement Full Stack",
+            "UI/UX Design",
+            "SEO",
+            "Docker",
+            "MySQL"
+        ],
+        "hasOccupation": {
+            "@type": "Occupation",
+            "name": "Développeur Web Fullstack Freelance",
+            "skills": "Symfony, React, JavaScript, PHP, MySQL, WordPress, WooCommerce, Docker, Git, Agile",
+            "occupationalCategory": "15-1254.00",
+            "startDate": "2020"
+        },
+        "areaServed": [
+            {
+                "@type": "City",
+                "name": "Riom"
+            },
+            {
+                "@type": "City",
+                "name": "Clermont-Ferrand"
+            },
+            {
+                "@type": "City",
+                "name": "Vichy"
+            },
+            {
+                "@type": "City",
+                "name": "Issoire"
+            },
+            {
+                "@type": "AdministrativeArea",
+                "name": "Puy-de-Dôme"
+            },
+            {
+                "@type": "AdministrativeArea",
+                "name": "Auvergne-Rhône-Alpes"
+            },
+            {
+                "@type": "Country",
+                "name": "France"
+            }
+        ],
+        "description": "Développeur web freelance spécialisé Symfony (senior), React (intermédiaire) et WordPress. 5 ans d'expérience. Création d'applications web sur mesure, sites vitrine et boutiques e-commerce. Basé à Riom, intervention dans le Puy-de-Dôme et en distanciel partout en France.",
+        "makesOffer": [
+            {
+                "@type": "Offer",
+                "itemOffered": {
+                    "@type": "Service",
+                    "name": "Développement d'applications web full-stack",
+                    "description": "Création d'applications web sur mesure avec React et Symfony",
+                    "provider": {
+                        "@type": "Person",
+                        "name": "Christophe Thevenet"
+                    }
+                }
+            },
+            {
+                "@type": "Offer",
+                "itemOffered": {
+                    "@type": "Service",
+                    "name": "Création de sites vitrine WordPress",
+                    "description": "Sites vitrine WordPress professionnels et optimisés SEO",
+                    "provider": {
+                        "@type": "Person",
+                        "name": "Christophe Thevenet"
+                    }
+                }
+            },
+            {
+                "@type": "Offer",
+                "itemOffered": {
+                    "@type": "Service",
+                    "name": "Boutiques e-commerce",
+                    "description": "Boutiques en ligne avec WordPress/WooCommerce ou Symfony",
+                    "provider": {
+                        "@type": "Person",
+                        "name": "Christophe Thevenet"
+                    }
+                }
+            },
+            {
+                "@type": "Offer",
+                "itemOffered": {
+                    "@type": "Service",
+                    "name": "Maintenance et administration de sites web",
+                    "description": "Support technique, maintenance et administration de sites web",
+                    "provider": {
+                        "@type": "Person",
+                        "name": "Christophe Thevenet"
+                    }
+                }
+            }
+        ]
+    }
+    </script>
+</head>
+
+
+
+
+
   <body style="background-color: #000000">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
