feat: add sitemap & robot.txt for SEO

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         content="Christophe Thevenet - Développeur freelance Symfony, React & WordPress basé à Riom. Applications web, sites vitrine et e-commerce. Puy-de-Dôme et distanciel." />
     <meta name="keywords"
         content="développeur web freelance, Symfony, React, WordPress, WooCommerce, Puy-de-Dôme, Riom, Clermont-Ferrand, Vichy, application web, site vitrine, e-commerce, développeur full-stack, PHP, JavaScript, création site internet, Auvergne" />
+    <link rel="canonical" href="https://christophethevenet.fr/" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
