--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html lang="fr">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NS1CVR0J45"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-            dataLayer.push(arguments);
+        // Charge Analytics seulement si pas en mode prerender
+        if (navigator.userAgent.indexOf('Prerender') === -1) {
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+            gtag('config', 'G-NS1CVR0J45');
+
+            // Charge le script
+            var script = document.createElement('script');
+            script.async = true;
+            script.src = 'https://www.googletagmanager.com/gtag/js?id=G-NS1CVR0J45';
+            document.head.appendChild(script);
         }
-        gtag('js', new Date());
-        gtag('config', 'G-NS1CVR0J45');
     </script>
 
     <meta charset="UTF-8" />
@@ -176,8 +181,9 @@
 
 
 
-  <body style="background-color: #000000">
+<body style="background-color: #000000">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+</body>
+
 </html>
