feat: update meta description SEO

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- SEO Principal -->
     <title>Développeur Symfony React WordPress Freelance | Puy-de-Dôme (63)</title>
-    <meta name="description"
-        content="Christophe Thevenet - Développeur freelance Symfony, React & WordPress basé à Riom. Applications web, sites vitrine et e-commerce. Puy-de-Dôme et distanciel." />
+    <meta name="description" content="Christophe Thevenet • Développeur Symfony/React/WordPress diplômé & certifié TOSA • 5 ans d'expérience • Apps & sites pros • Puy-de-Dôme ou distanciel" />
     <meta name="keywords"
         content="développeur web freelance, Symfony, React, WordPress, WooCommerce, Puy-de-Dôme, Riom, Clermont-Ferrand, Vichy, application web, site vitrine, e-commerce, développeur full-stack, PHP, JavaScript, création site internet, Auvergne" />
     <link rel="canonical" href="https://christophethevenet.fr/" />
@@ -16,16 +15,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://christophethevenet.fr" />
     <meta property="og:title" content="Développeur Symfony React WordPress Freelance | Puy-de-Dôme" />
-    <meta property="og:description"
-        content="Développeur freelance Symfony, React & WordPress basé à Riom. Applications web, sites vitrine et e-commerce. Puy-de-Dôme et distanciel." />
+    <meta property="og:description" content="Christophe Thevenet • Développeur Symfony/React/WordPress diplômé & certifié TOSA • 5 ans d'expérience • Apps & sites pros • Puy-de-Dôme ou distanciel" />
     <meta property="og:image" content="https://christophethevenet.fr/assets/affiche_digitob_v3.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@D_I_G_I_T_O_B" />
     <meta name="twitter:title" content="Développeur Symfony React WordPress Freelance | Puy-de-Dôme" />
-    <meta name="twitter:description"
-        content="Développeur freelance Symfony, React & WordPress basé à Riom. Applications web et e-commerce. Puy-de-Dôme et distanciel." />
+    <meta name="twitter:description" content="Christophe Thevenet • Développeur Symfony/React/WordPress diplômé & certifié TOSA • 5 ans d'expérience • Apps & sites pros • Puy-de-Dôme ou distanciel" />
     <meta name="twitter:image" content="https://christophethevenet.fr/assets/affiche_digitob_v3.png" />
 
     <!-- Favicon -->
